--- a/Chatapplication/chatapp/templates/index.html
+++ b/Chatapplication/chatapp/templates/index.html
@@ -108,7 +108,7 @@
       </script>
     </body>
     {% else %}
-    <center><h1>Welcome to Chatapplication</h1></center>
+    <center><h1>Welcome to Revanth Chatapplication</h1></center>
     {% endif %}
     {% endblock %}
   </div>
